Criação de rota para relatório.
