# book-management/src/main/java/com/book/management/application/controller/response/ReportResponseDTO.java
@@ -1,0 +1,14 @@
+package com.book.management.application.controller.response;
+
+import java.math.BigDecimal;
+
+public record ReportResponseDTO(
+    Long bookCode,
+    String bookTitle,
+    String publisher,
+    String edition,
+    String yearPublication,
+    BigDecimal price,
+    String authors,
+    String subjects
+) {}
